--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="An Engineer who is a former Intern at RiseTech. He holds a Bachelor's degree in Computer Engineering from National University of Sciences and Technology. He has keen interest in Robotics. He is also a photographer, athlete and artist. "
+      content="Hello, my name is Ola Oni. I'm currently pursuing my Ph.D. in Computational Biology at Weill Cornell Medical College. My research involves implementing data science and machine learning in the computational study of biological and biochemical systems."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -31,9 +31,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hashir Shoaib</title>
+    <title>Ola Oni</title>
   </head>
-  <body>
+  <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -46,5 +46,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
   </body>
 </html>
