--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" />
+
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
